fix(realestate): GG 데이터드림 4개 endpoint 정상화 (#41)
사용자가 데이터드림 사이트에서 정확한 서비스명 4종 확보 후 어댑터 전면 재작성.

호출 모델 변경:
- plan 추정 path /AptMaeMul → 실제 4개 endpoint로 분리
  · /Apttradedelng (아파트 매매 실거래)
  · /Apttradedelngdetail (아파트 매매 상세)
  · /Coaltnmlpxhoutrade (연립 다세대 매매)
  · /Snglnsmulthstrade (단독 다가구 매매)
- SIGUNGU_CODE → SIGUN_CD 파라미터명 정정
- DEAL_AMT → DELNG_AMT 응답 필드명 정정 (만원 단위 거래금액)
- Content-Type이 text/html이어도 JSON이라 String + ObjectMapper로 직접 파싱

GgDataset enum + indicator prefix 분리:
- APT/APT_DETAIL/COALTN/SNGL 4종 prefix
- region당 8개 indicator (4 endpoint × COUNT/AVG_PRICE)

부분 실패 허용:
- 한 dataset 실패가 다른 dataset 호출을 막지 않게 try-catch + continue
- 일시적 SSL handshake 에러 등으로 일부만 실패해도 부분 적재 가능

dry-run 결과:
- 직전: success=585, failure=31 (GG 31 region 모두 실패)
- 본 fix 후: success=616, failure=0, savedRows=585 — 모든 출처 정상화

DB 누적:
- MOLIT 336, GG_DATA_DREAM 248, SUBSCRIPTION_HOME 168, KOSIS 56, SEOUL 50

남은 후속 (사용자 액션):
- REB 어댑터 재설계 (별도 brainstorm 참조)
- HUG/HUB는 의도된 비활성화 유지